--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
-                <span class="description-title">Services</span>
+                <span class="description-title">УСЛУГИ</span>
                 <h2>УСЛУГИ</h2>
                 <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
             </div><!-- End Section Title -->
@@ -308,7 +308,7 @@
 
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
-                <span class="description-title">Portfolio</span>
+                <span class="description-title">ПРОЕКТЫ</span>
                 <h2>ПРОЕКТЫ</h2>
                 <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
             </div><!-- End Section Title -->
@@ -480,7 +480,7 @@
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
                 <span class="description-title">НАША КОМАНДА</span>
-                <h2>Team</h2>
+                <h2>НАША КОМАНДА</h2>
                 <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
             </div><!-- End Section Title -->
 
@@ -619,7 +619,7 @@
 
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
-                <span class="description-title">Contact</span>
+                <span class="description-title">КОНТАКТЫ</span>
                 <h2>КОНТАКТЫ</h2>
                 <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
             </div><!-- End Section Title -->
