--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- #region Минимально необходимые/желательные элементы -->
     <!-- Установите заголовок документа -->
-    <title>Main</title>
+    <title>Красноярское аэрогеодезическое предприятие</title>
 
     <!-- #region meta e.t.c. -->
     <meta charset="utf-8">
