--- a/index.html
+++ b/index.html
@@ -72,10 +72,15 @@
     <header id="header" class="header d-flex align-items-center sticky-top">
         <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-            <a href="index.html" class="logo d-flex align-items-center">
-                <!-- Uncomment the line below if you also wish to use an image logo -->
-                <!-- <img src="assets/img/logo.png" alt=""> -->
-                <h1 class="sitename">КАГП</h1>
+            <!--<a href="index.html" class="logo d-flex align-items-center">-->
+            <!-- Uncomment the line below if you also wish to use an image logo -->
+            <!-- <img src="assets/img/logo.png" alt=""> -->
+            <!--<h1 class="sitename">КАГП</h1>
+            </a>-->
+
+            <a class="navbar-brand fw-bold" href="/">
+                <img src="/assets/img/gerb_geo.png" alt="" width="70" height="74" class="d-inline-block align-middle me-1">
+                КАГП
             </a>
 
             <nav id="navmenu" class="navmenu">
@@ -490,10 +495,10 @@
 
                     <div class="col-lg-4 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
                         <div class="member">
-                            <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/team/Gavrushov.jpg" class="img-fluid" alt="">
                             <div class="member-content">
-                                <h4>Walter White</h4>
-                                <span>Web Development</span>
+                                <h4>Гаврюшов Юрий Владимирович</h4>
+                                <span>Исполнительный директор</span>
                                 <p>
                                     Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
                                 </p>
@@ -509,10 +514,10 @@
 
                     <div class="col-lg-4 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
                         <div class="member">
-                            <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/team/ruzanovAF.jpg" class="img-fluid" alt="">
                             <div class="member-content">
-                                <h4>Sarah Jhinson</h4>
-                                <span>Marketing</span>
+                                <h4>Рузанов Александр Фёдорович</h4>
+                                <span>Первый заместитель директора</span>
                                 <p>
                                     Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
                                 </p>
@@ -645,20 +650,19 @@
                         <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
                             <i class="bi bi-telephone flex-shrink-0"></i>
                             <div>
-                                <h3>Call Us</h3>
-                                <p>+1 5589 55488 55</p>
+                                <h3>Позвоните нам:</h3>
+                                <p><a href="tel:+73912018320">+7 (391) 201 83 20 (доб. 101)</a></p>
                             </div>
                         </div><!-- End Info Item -->
 
                         <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="500">
                             <i class="bi bi-envelope flex-shrink-0"></i>
                             <div>
-                                <h3>Email Us</h3>
-                                <p>info@example.com</p>
+                                <h3>Напишите нам:</h3>
+                                <p><a href="mailto:kagp24@mail.ru">kagp24@mail.ru</a></p>
                             </div>
                         </div><!-- End Info Item -->
                     </div>
-
                 </div>
             </div>
         </section><!-- /Contact Section -->
