--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- #region Минимально необходимые/желательные элементы -->
     <!-- Установите заголовок документа -->
-    <title>Красноярское аэрогеодезическое предприятие</title>
+    <title>Красноярское аэрогеодезическое предприятие. Главная</title>
 
     <!-- #region meta e.t.c. -->
     <meta charset="utf-8">
@@ -190,7 +190,7 @@
 
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
                         <p>Полный комплекс инженерных изысканий для линейных и площадных объектов, включающий в себя инженерно-геологические, гидрометеорологические, экологические и гидрологические изыскания. </p>
-                        <a href="#" class="read-more"><span>Полный комплекс услуг</span><i class="bi bi-arrow-right"></i></a>
+                        <a href="about.html" class="read-more"><span>Подробнее о предприятии</span><i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -239,7 +239,7 @@
             <div class="container section-title" data-aos="fade-up">
                 <span class="description-title">УСЛУГИ</span>
                 <h2>УСЛУГИ</h2>
-                <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+                <p><a href="services.htm">Полный комплекс услуг</a></p>
             </div><!-- End Section Title -->
 
             <div class="container">
@@ -650,16 +650,24 @@
                         <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
                             <i class="bi bi-telephone flex-shrink-0"></i>
                             <div>
-                                <h3>Позвоните нам:</h3>
-                                <p><a href="tel:+73912018320">+7 (391) 201 83 20 (доб. 101)</a></p>
+                                <a href="tel:+73912018320">
+                                    <h3>Позвоните нам:</h3>
+                                    <p>
+                                        +7 (391) 201 83 20 (доб. 101)
+                                    </p>
+                                </a>
                             </div>
                         </div><!-- End Info Item -->
 
                         <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="500">
                             <i class="bi bi-envelope flex-shrink-0"></i>
                             <div>
-                                <h3>Напишите нам:</h3>
-                                <p><a href="mailto:kagp24@mail.ru">kagp24@mail.ru</a></p>
+                                <a href="mailto:kagp24@mail.ru">
+                                    <h3>Напишите нам:</h3>
+                                    <p>
+                                        kagp24@mail.ru
+                                    </p>
+                                </a>
                             </div>
                         </div><!-- End Info Item -->
                     </div>
@@ -674,13 +682,13 @@
             <div class="row gy-4">
                 <div class="col-lg-4 col-md-6 footer-about">
                     <a href="index.html" class="logo d-flex align-items-center">
-                        <span class="sitename">MyBiz</span>
+                        <span class="sitename">КАГП</span>
                     </a>
                     <div class="footer-contact pt-3">
-                        <p>A108 Adam Street</p>
-                        <p>New York, NY 535022</p>
-                        <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-                        <p><strong>Email:</strong> <span>info@example.com</span></p>
+                        <p>г. Красноярск</p>
+                        <p>ул. Иртышская, 2А</p>
+                        <p class="mt-3"><strong>Телефон:</strong> <span>+7 (391) 201 83 20</span></p>
+                        <p><strong>Email:</strong> <span>kagp24@mail.ru</span></p>
                     </div>
                     <div class="social-links d-flex mt-4">
                         <a href=""><i class="bi bi-twitter-x"></i></a>
