--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <!-- Установите базовый URL для всех относительных URL в документе -->
-    <!--<base href="https://example.com/page.html">-->
+    <!--<base href="https://kagp-24.ru/">-->
     <!-- Краткое описание документа (ограничение до 150 символов) -->
     <!-- Это содержимое может использоваться в результатах поисковых систем. -->
     <meta name="description" content="Описание страницы">
@@ -72,41 +72,28 @@
     <header id="header" class="header d-flex align-items-center sticky-top">
         <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-            <!--<a href="index.html" class="logo d-flex align-items-center">-->
-            <!-- Uncomment the line below if you also wish to use an image logo -->
-            <!-- <img src="assets/img/logo.png" alt=""> -->
-            <!--<h1 class="sitename">КАГП</h1>
-            </a>-->
-
             <a class="navbar-brand fw-bold" href="/">
                 <img src="/assets/img/gerb_geo.png" alt="" width="70" height="74" class="d-inline-block align-middle me-1">
-                КАГП
+                <span class="d-sm-none d-inline">КАГП</span>
+                <span class="d-sm-inline d-none">КРАСНОЯРСКОЕ АЭРОГЕОДЕЗИЧЕСКОЕ ПРЕДПРИЯТИЕ</span>
             </a>
 
             <nav id="navmenu" class="navmenu">
                 <ul>
                     <li><a href="#hero" class="active">ГЛАВНАЯ</a></li>
                     <li><a href="#about">О ПРЕДПРИЯТИИ</a></li>
-                    <li><a href="#services">УСЛУГИ</a></li>
+                    <li><a href="#services">ДЕЯТЕЛЬНОСТЬ</a></li>
                     <li><a href="#portfolio">ПРОЕКТЫ</a></li>
                     <li><a href="#team">НАША КОМАНДА</a></li>
                     <li class="dropdown">
-                        <a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                        <a href="#"><span>УСЛУГИ</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                         <ul>
-                            <li><a href="#">Dropdown 1</a></li>
-                            <li class="dropdown">
-                                <a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                                <ul>
-                                    <li><a href="#">Deep Dropdown 1</a></li>
-                                    <li><a href="#">Deep Dropdown 2</a></li>
-                                    <li><a href="#">Deep Dropdown 3</a></li>
-                                    <li><a href="#">Deep Dropdown 4</a></li>
-                                    <li><a href="#">Deep Dropdown 5</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Dropdown 2</a></li>
-                            <li><a href="#">Dropdown 3</a></li>
-                            <li><a href="#">Dropdown 4</a></li>
+                            <li><a href="/service/geodesy.html">Геодезические изыскания</a></li>
+                            <li><a href="/service/geology.html">Геологические изыскания</a></li>
+                            <li><a href="/service/laboratory.html">Лабораторные работы</a></li>
+                            <li><a href="/service/maps.html">Картографические работы</a></li>
+                            <li><a href="/service/cadastre.html">Кадастровые работы</a></li>
+                            <li><a href="/service/landmanage.html">Землеустроительные работы</a></li>
                         </ul>
                     </li>
                     <li><a href="#contact">КОНТАКТЫ</a></li>
@@ -137,7 +124,7 @@
                     <div class="carousel-container">
                         <h2>ГЕОДЕЗИЧЕСКИЕ РАБОТЫ</h2>
                         <p>Имеющийся парк современных геодезических приборов и инструментов, высокая квалификация специалистов позволяют предприятию выполнять все виды геодезических работ</p>
-                        <a href="#featured-services" class="btn-get-started">Подробнее</a>
+                        <a href="/service/geodesy.html" class="btn-get-started">Подробнее</a>
                     </div>
                 </div><!-- End Carousel Item -->
 
@@ -146,7 +133,7 @@
                     <div class="carousel-container">
                         <h2>КАРТОГРАФИЧЕСКИЕ РАБОТЫ</h2>
                         <p>Камеральный цех предприятия выполняет работы...</p>
-                        <a href="#featured-services" class="btn-get-started">Продукция</a>
+                        <a href="/service/maps.html" class="btn-get-started">Продукция</a>
                     </div>
                 </div><!-- End Carousel Item -->
 
@@ -155,7 +142,7 @@
                     <div class="carousel-container">
                         <h2>ЗЕМЛЕУСТРОИТЕЛЬНЫЕ РАБОТЫ</h2>
                         <p>Красноярское аэрогеодезическое предприятие имеет в своем штате квалифицированных специалистов в области землеустройства и кадастра с опытом работы на территории Сибири</p>
-                        <a href="#featured-services" class="btn-get-started">Продукция</a>
+                        <a href="/service/landmanage.html" class="btn-get-started">Продукция</a>
                     </div>
                 </div><!-- End Carousel Item -->
                 <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
@@ -238,8 +225,8 @@
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
                 <span class="description-title">УСЛУГИ</span>
-                <h2>УСЛУГИ</h2>
-                <p><a href="services.htm">Полный комплекс услуг</a></p>
+                <h2>ДЕЯТЕЛЬНОСТЬ</h2>
+                <p><a href="services.htm">Все направления деятельности</a></p>
             </div><!-- End Section Title -->
 
             <div class="container">
@@ -486,7 +473,7 @@
             <div class="container section-title" data-aos="fade-up">
                 <span class="description-title">НАША КОМАНДА</span>
                 <h2>НАША КОМАНДА</h2>
-                <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+                <p>??????????????????????????????????????????????????????????</p>
             </div><!-- End Section Title -->
 
             <div class="container">
@@ -495,19 +482,13 @@
 
                     <div class="col-lg-4 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
                         <div class="member">
-                            <img src="assets/img/team/Gavrushov.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/team/gavrushov.jpg" class="img-fluid" alt="">
                             <div class="member-content">
                                 <h4>Гаврюшов Юрий Владимирович</h4>
                                 <span>Исполнительный директор</span>
                                 <p>
-                                    Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
+                                    Исполнительный директор – директор филиала ППК "Роскадастр» «Красноярское АГП"
                                 </p>
-                                <div class="social">
-                                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
-                                    <a href=""><i class="bi bi-linkedin"></i></a>
-                                </div>
                             </div>
                         </div>
                     </div><!-- End Team Member -->
@@ -519,33 +500,21 @@
                                 <h4>Рузанов Александр Фёдорович</h4>
                                 <span>Первый заместитель директора</span>
                                 <p>
-                                    Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
+                                    Первый заместитель директора филиала
                                 </p>
-                                <div class="social">
-                                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
-                                    <a href=""><i class="bi bi-linkedin"></i></a>
-                                </div>
                             </div>
                         </div>
                     </div><!-- End Team Member -->
 
                     <div class="col-lg-4 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
                         <div class="member">
-                            <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/team/zamazi.jpg" class="img-fluid" alt="">
                             <div class="member-content">
-                                <h4>William Anderson</h4>
-                                <span>Content</span>
+                                <h4>Замазий Александр Юрьевич</h4>
+                                <span>Главный инженер</span>
                                 <p>
-                                    Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
+                                    Главный инженер филиала
                                 </p>
-                                <div class="social">
-                                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
-                                    <a href=""><i class="bi bi-linkedin"></i></a>
-                                </div>
                             </div>
                         </div>
                     </div><!-- End Team Member -->
@@ -680,7 +649,7 @@
 
         <div class="container footer-top">
             <div class="row gy-4">
-                <div class="col-lg-4 col-md-6 footer-about">
+                <div class="col-lg-4 col-md-4 footer-about">
                     <a href="index.html" class="logo d-flex align-items-center">
                         <span class="sitename">КАГП</span>
                     </a>
@@ -690,69 +659,41 @@
                         <p class="mt-3"><strong>Телефон:</strong> <span>+7 (391) 201 83 20</span></p>
                         <p><strong>Email:</strong> <span>kagp24@mail.ru</span></p>
                     </div>
-                    <div class="social-links d-flex mt-4">
+                    <!--<div class="social-links d-flex mt-4">
                         <a href=""><i class="bi bi-twitter-x"></i></a>
                         <a href=""><i class="bi bi-facebook"></i></a>
                         <a href=""><i class="bi bi-instagram"></i></a>
                         <a href=""><i class="bi bi-linkedin"></i></a>
-                    </div>
+                    </div>-->
                 </div>
 
-                <div class="col-lg-2 col-md-3 footer-links">
-                    <h4>Useful Links</h4>
+                <div class="col-lg-4 col-md-4 footer-links">
+                    <h4>Ссылки</h4>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Terms of service</a></li>
-                        <li><a href="#">Privacy policy</a></li>
+                        <li><a href="/">Главная</a></li>
+                        <li><a href="/about.html">О предприятии</a></li>
+                        <li><a href="/services.html">Деятельность</a></li>
+                        <li><a href="/projects.html">Проекты</a></li>
+                        <li><a href="/user_agreement.html">Пользовательское соглашение</a></li>
                     </ul>
                 </div>
 
-                <div class="col-lg-2 col-md-3 footer-links">
-                    <h4>Our Services</h4>
+                <div class="col-lg-4 col-md-4 footer-links">
+                    <h4>Услуги</h4>
                     <ul>
-                        <li><a href="#">Web Design</a></li>
-                        <li><a href="#">Web Development</a></li>
-                        <li><a href="#">Product Management</a></li>
-                        <li><a href="#">Marketing</a></li>
-                        <li><a href="#">Graphic Design</a></li>
-                    </ul>
-                </div>
-
-                <div class="col-lg-2 col-md-3 footer-links">
-                    <h4>Hic solutasetp</h4>
-                    <ul>
-                        <li><a href="#">Molestiae accusamus iure</a></li>
-                        <li><a href="#">Excepturi dignissimos</a></li>
-                        <li><a href="#">Suscipit distinctio</a></li>
-                        <li><a href="#">Dilecta</a></li>
-                        <li><a href="#">Sit quas consectetur</a></li>
-                    </ul>
-                </div>
-
-                <div class="col-lg-2 col-md-3 footer-links">
-                    <h4>Nobis illum</h4>
-                    <ul>
-                        <li><a href="#">Ipsam</a></li>
-                        <li><a href="#">Laudantium dolorum</a></li>
-                        <li><a href="#">Dinera</a></li>
-                        <li><a href="#">Trodelas</a></li>
-                        <li><a href="#">Flexo</a></li>
+                        <li><a href="/service/geodesy.html">Геодезические изыскания</a></li>
+                        <li><a href="/service/geology.html">Геологические изыскания</a></li>
+                        <li><a href="/service/laboratory.html">Лабораторные работы</a></li>
+                        <li><a href="/service/maps.html">Картографические работы</a></li>
+                        <li><a href="/service/cadastre.html">Кадастровые работы</a></li>
+                        <li><a href="/service/landmanage.html">Землеустроительные работы</a></li>
                     </ul>
                 </div>
             </div>
         </div>
 
         <div class="container copyright text-center mt-4">
-            <p>© <span>Copyright</span> <strong class="px-1 sitename">MyBiz</strong> <span>All Rights Reserved</span></p>
-            <div class="credits">
-                <!-- All the links in the footer should remain intact. -->
-                <!-- You can delete the links only if you've purchased the pro version. -->
-                <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-            </div>
+            <p>© <span>Copyright</span> <strong class="px-1 sitename">КАГП</strong> <span>Все права защищены</span></p>
         </div>
     </footer>
 
