--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
 
     <!-- #region Минимально необходимые/желательные элементы -->
     <!-- Установите заголовок документа -->
-    <title>Красноярское аэрогеодезическое предприятие. О предприятии.</title>
+    <title>Красноярское аэрогеодезическое предприятие. Услуги.</title>
 
     <!-- #region meta e.t.c. -->
     <meta charset="utf-8">
@@ -105,8 +105,8 @@
                 <div class="container">
                     <div class="row d-flex justify-content-center text-center">
                         <div class="col-lg-8">
-                            <h1>О ПРЕДПРИЯТИИ</h1>
-                            <p class="mb-0">ИСТОРИЯ ПРЕДПРИЯТИЯ</p>
+                            <h1>УСЛУГИ</h1>
+                            <p class="mb-0">Оказываемые услуги</p>
                         </div>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                 <div class="container">
                     <ol>
                         <li><a href="index.html">Главная</a></li>
-                        <li class="current">О предприятии</li>
+                        <li class="current">Услуги</li>
                     </ol>
                 </div>
             </nav>
@@ -124,20 +124,14 @@
         <section id="portfolio-details" class="portfolio-details section">
 
             <div class="container" data-aos="fade-up" data-aos-delay="100">
-                <p>Истоки становления предприятия уходят в далёкий 1938 год, когда была сформирована экспедиция №4, задачей которой было создание звеньев триангуляции 1 класса в районах Сибири и Дальнего Востока. Без спецодежды, без спальных мешков, ночуя около костра, люди выполняли работу, такую нужную для страны. Постоянной базы у отряда не было.  С передвижением отряда по стране менялись и места базирования подразделения. В начале это был г. Славгород Алтайского края, в 1939 году г. Ленинск-Кузнецкий Кемеровской области.  Потом, в зависимости от местоположения объектов, были Газимурский Завод Читинской области, город Сковородино Амурской области, Хабаровск, город Тулун Иркутской области  и т.д.  В 1939г экспедиция №4 была переименована в отряд №4, а в 1943г отряд №4 переименован в отряд №47.</p>
-                <p>В 1959 году у отряда наконец появилась постоянная прописка в городе Красноярск. К этому времени объемы работ по созданию полигонов 1 класса значительно сократились, необходимости в постоянных переездах не стало и отряд №47 под руководством Карева П.А. приступил к строительству собственной базы – конторы и жилья для работников. Подразделение начало осваивать работы по созданию заполняющих сетей триангуляции 2-3 класса. Основной состав исполнителей того времени был из г. Новосибирск. Значительная часть специалистов после завершения работ на объекте и сдачи материалов ОТК уезжала на зиму домой. Это были высококвалифицированные кадры, прекрасно знавшие свою работу и выполнявшие её с высоким качеством.</p>
-                <p>В начале 60-х годов, наряду с заполняющими сетями триангуляции 2-3 классов, начали так же проводиться топографические работы. Интересы государства к этому времени поставили цель – срочно покрыть картами масштаба 1:25 000 огромные пространства, в том числе территорию Красноярского края. В 1965г отряд №47 переименован в экспедицию №147. На смену геодезистам из Новосибирска были направлены специалисты из топографических отрядов. Были установлены стереометры СТД и СТД1.  Пришли молодые выпускники техникумов и ВУЗов. В считанные месяцы  они освоили новую технологию и в межполевой период вносили свой достойный вклад в дело создания карты масштаба 1:25 000. Началась эпоха стереорисовки и картосоставления.</p>
-                <p>С 1973г в экспедиции №47 началась установка новых универсальных приборов стереографов СД и СД-1 для обработки плановых снимков. В 1974 году экспедиция №47 была передана в предприятие №1, база которого находилась в городе Иркутск, и получила статус объединенной комплексной экспедиции №4 (ОКЭ №4). В первой половине 80-х годов ОКЭ №4 заняла второе место по ГУГК среди полевых экспедиций по объёму стереорисовки и подготовке карт к изданию. Это были годы расцвета экспедиции, когда любые задачи и объёмы решались легко и точно. В это же время активно строилось жилье для работников предприятия. К середине 80-х предприятием освоился новый вид работ - подготовка карт к изданию методом гравирования. За короткое время были организованы бригады по подготовке карт к изданию, начала работу технологическая фотолаборатория, появился печатный станок и фотонаборный аппарат.</p>
-                <p>01.10.1986 года на базе ОКЭ №4 было создано Предприятие №24 ГУГК при СМ СССР. В его состав вошли: ОКЭ №4(г. Красноярск), ОКЭ №6(г. Ачинск) и Красноярский городской геодезический центр.</p>
-                <p>01.04.1989г Предприятие №24 переименовано в Красноярское аэрогеодезическое предприятие (Красноярское АГП).</p>
-                <p>В 90-е годы, экономически сложные для отрасли времена, предприятию удалось сохранить свой потенциал на высоком уровне, максимально сохранив основной кадровый состав.</p>
-                <p>С приходом нового тысячелетия в Красноярском АГП наступила эра цифровых технологий. Стали широко внедряться спутниковые определения координат. С 2002г. предприятие полностью перешло на цифровые технологии создания карт. В работе по созданию и обновлению топографических планов городов стали применяться трехмерные системы изображения объектов. Существенно обновился парк инструментов и техники. Стали расти объемы работ с использованием новых технологий.</p>
-                <p></p>20.03.2001г. Красноярское аэрогеодезическое предприятие переименовано в ФГУП «Красноярское аэрогеодезическое предприятие» (ФГУП «КАГП».</p>
-                <p>15.08.2012г. ФГУП «КАГП» реорганизовано в форме преобразования в открытое акционерное общество «Красноярское аэрогеодезическое предприятие» (ОАО «КАГП»).</p>
-                <p>03.09.2015г. ОАО «КАГП» переименовано в акционерное общество «Красноярское аэрогеодезическое предприятие» (АО «КАГП»).</p>
-                <p>11.07.2023г. на базе АО «КАГП» создан Филиал «КАГП» АО «Роскартография» без изменения профильных направлений деятельности и организационной структуры предприятия.</p>
-                <p>01.01.2024г. в связи с реорганизацией АО «Роскартография» в форме присоединения к публично-правовой компании «Роскадастр» создан Филиал публично-правовой компании "Роскадастр" "Красноярское аэрогеодезическое предприятие" (Филиал ППК "Роскадастр" "Красноярское АГП") без изменения профильных направлений деятельности и организационной структуры предприятия.</p>
-                <p>Сегодня "Красноярское АГП" - это современное, востребованное, динамически развивающееся предприятие, постоянно расширяющее материально-техническую базу и виды производственных работ. Высококлассным специалистам предприятия по силам находить оптимальные решения для производственных задач, используя большой опыт предшествующих поколений и новейшие достижения науки и техники в области геодезии и картографии.</p>
+                <ul>
+                    <li><a href="/service/geodesy.html">Геодезические изыскания</a></li>
+                    <li><a href="/service/geology.html">Геологические изыскания</a></li>
+                    <li><a href="/service/laboratory.html">Лабораторные работы</a></li>
+                    <li><a href="/service/maps.html">Картографические работы</a></li>
+                    <li><a href="/service/cadastre.html">Кадастровые работы</a></li>
+                    <li><a href="/service/landmanage.html">Землеустроительные работы</a></li>
+                </ul>
             </div>
         </section><!-- /Portfolio Details Section -->
     </main>
