--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
 
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
-                <span class="description-title">ПРОЕКТЫ</span>
-                <h2>ПРОЕКТЫ</h2>
-                <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+                <span class="description-title">НАШИ ЗАКАЗЧИКИ</span>
+                <h2>НАШИ ЗАКАЗЧИКИ</h2>
+                <p>Компании, которые нам доверяют</p>
             </div><!-- End Section Title -->
 
             <div class="container">
