--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <!-- Это содержимое может использоваться в результатах поисковых систем. -->
     <meta name="description" content="Описание страницы">
 
+    <meta name="yandex-verification" content="73e57627a0155989" />
+
     <!-- #endregion meta e.t.c. -->
     <!-- #region Ссылки -->
     <!-- Fonts -->
